# pytui

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  Makefile  PYTHON_IMPLEMENTATION_GUIDE.md  README.md  pyproject.toml  results.json
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  core-opentui-alignment-plan.md  examples-implementation-plan.md  getting-started.md  keyboard-alignment-refactor-plan.md  lib-opentui-alignment-plan.md  opentui-pytui-comparison.md  opentui-zig-alignment-options.md  rust-refactor-opentui-alignment-plan.md
examples/: README.md  animation_react.py  ascii_react.py  basic_react.py  borders_react.py  box_react.py  code_viewer.py  components_react.py  counter.py  counter_auto_react.py  counter_react.py  dashboard.py  dashboard_react.py  debug_keys.py  diff_react.py  diff_viewer.py  extend_react.py  flush_sync_react.py  form_react.py  hello.py  hello_react.py  line_number_react.py  login_form.py  opacity_react.py  opencode_react.py  scroll_accel_demo.py  scroll_react.py  tabs_react.py  text_react.py  textarea_demo.py  timer_react.py  todo_react.py
scripts/: run-native-tests.sh
src/pytui/: __init__.py  diagnose_input.py
src/pytui/benchmark/: README.md  __init__.py  renderer_benchmark.py
src/pytui/components/: __init__.py  ascii_font.py  box.py  code.py  diff.py  edit_buffer_renderable.py  frame_buffer.py  input.py  line_number.py  markdown.py  scrollbar.py  scrollbox.py  select.py  slider.py  tab_select.py  text.py  text_buffer_renderable.py  text_node.py  textarea.py
src/pytui/core/: __init__.py  animation.py  ansi.py  buffer.py  colors.py  console.py  edit_buffer.py  editor_view.py  events.py  keyboard.py  layout.py  mouse.py  poga_layout.py  renderable.py  renderer.py  rgba.py  selection.py  syntax_style.py  terminal.py  terminal_palette.py  text_buffer.py  text_buffer_view.py  types.py  utils.py
src/pytui/examples/: README.md  __init__.py  __main__.py  console_demo.py  input_demo.py  input_select_layout_demo.py  key_input_demo.py  link_demo.py  nested_zindex_demo.py  opacity_example.py  registry.py  relative_positioning_demo.py  scroll_example.py  select_demo.py  selector_demo.py  simple_layout_example.py  (+5 more)
src/pytui/native/: Cargo.toml  README.md  build.rs  pyproject.toml
src/pytui/native/src/: ansi.rs  buffer.rs  cell.rs  geometry.rs  grapheme.rs  lib.rs  link.rs  mem_registry.rs  renderer.rs  rope.rs  syntax_style.rs  terminal.rs  tests.rs  text_buffer.rs  utf8.rs  utils.rs
tests/: conftest.py
tests/benchmarks/: __init__.py  bench_buffer.py  bench_layout.py
tests/integration/: test_app_forms.py  test_app_hello.py  test_app_layout.py  test_console_overlay.py  test_react_flow.py  test_test_renderer_snapshot.py
(+161 files in other folders)
