[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytui"
version = "0.1.0"
description = "Python TUI framework (Plan A)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["tui", "terminal", "ui", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "pyee>=11.0.0",
    "numpy>=1.24.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
# poga = YogaLayout Python binding on PyPI (yoga-layout has no PyPI package)
yoga = ["poga>=0.1.0"]
syntax = ["tree-sitter>=0.20.0", "tree-sitter-languages>=1.10.0"]
full = ["poga>=0.1.0", "tree-sitter>=0.20.0", "tree-sitter-languages>=1.10.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
